objects/Product_Transaction_Summary__c.object
<CustomObject>
    <fields>
        <fullName>Kit_Type__c</fullName>
        <label>Kit Type</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OnHand__c</fullName>
        <label>OnHand</label>
        <summarizedField>Product_Transactions__c.Effective_Quantity_for_Onhand__c</summarizedField>
        <summaryFilterItems>
            <field>Product_Transactions__c.Onhand__c</field>
            <operation>equals</operation>
            <value>True</value>
        </summaryFilterItems>
        <summaryForeignKey>Product_Transactions__c.Product_Transaction_Summary__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>OnOrder__c</fullName>
        <label>OnOrder</label>
        <summarizedField>Product_Transactions__c.Effective_Quantity_for_OnOrder__c</summarizedField>
        <summaryFilterItems>
            <field>Product_Transactions__c.OnOrder__c</field>
            <operation>equals</operation>
            <value>True</value>
        </summaryFilterItems>
        <summaryForeignKey>Product_Transactions__c.Product_Transaction_Summary__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Product__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Product</label>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>Product Transaction Summarys</relationshipLabel>
        <relationshipName>Product_Transaction_Summarys</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>PT - Product Transaction Summary</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Product__c</columns>
        <columns>Kit_Type__c</columns>
        <columns>OnHand__c</columns>
        <columns>OnOrder__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>CREATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>All1</fullName>
        <columns>NAME</columns>
        <columns>Kit_Type__c</columns>
        <columns>Product__c</columns>
        <columns>OnHand__c</columns>
        <columns>OnOrder__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>PS-{00000}</displayFormat>
        <label>Product Transaction Summary Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Product Transaction Summarys</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>